google advance search

--- a/google_search/advance.html
+++ b/google_search/advance.html
@@ -7,6 +7,34 @@
     <title>Google Advanced Search</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header class="gb_Pa">
+            <div class="iconhead">
+                <a href="index.html"><img src="images/googlelog.png" alt="Google"></a>
+            </div>
+        </header>
+
+        <div class="appbar">
+            <label style="margin-left:10px">Advanced Search</label>
+        </div>
+        <div class="gy3Eif"></div>
+        <div>
+            <form action="" method="get">
+                <div class="otByu">
+                    <div class="yIQOUb">
+                        <div class="I1Kbt">
+                            <div class="lOTAE"> 
+                                <span>Find pages with...</span>
+                            </div>
+                        </div>
+                        <div class="HoCfzc">&nbsp;</div>
+                        <div class="orcpGe">
+                            <div class="lOTAE">To do this in the search box.</div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
