--- a/google_search/advance.html
+++ b/google_search/advance.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="advance.css">
     <title>Google Advanced Search</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 </head>
 <body>
     <div class="container">
         <header class="gb_Pa">
-            <div class="iconhead">
-                <a href="index.html"><img src="images/googlelog.png" alt="Google"></a>
+            <div class="gb_Hc">
+                <a class="gb_Ic" href="index.html"><img class="gb_5d" src="images/googlelogo.png" alt="Google"></a>
             </div>
         </header>
 
@@ -18,8 +19,8 @@
             <label style="margin-left:10px">Advanced Search</label>
         </div>
         <div class="gy3Eif"></div>
-        <div>
-            <form action="" method="get">
+        <div class="Mza7yc">
+            <form action="/search" id="s1zaZb" method="get">
                 <div class="otByu">
                     <div class="yIQOUb">
                         <div class="I1Kbt">
@@ -30,6 +31,75 @@
                         <div class="HoCfzc">&nbsp;</div>
                         <div class="orcpGe">
                             <div class="lOTAE">To do this in the search box.</div>
+                        </div>
+                        
+                        <div class="otByu">
+                            <div class="yIQOUb">
+                                <div class="FAcADc">
+                                    <div class="lOTAE">
+                                        <label for="xX4UFf">all these words:</label>
+                                    </div>
+                                </div>
+                                <div class="jYcx0e">
+                                    <div class="PLLUQc">
+                                        <input class="jfk-textinput" value="" autofocus="autofocus" id="xX4UFf" name="as_q" type="text">
+                                    </div>
+                                </div>
+                                <div class="cwqNnb dulCv">
+                                    <div class="lOTAE">Type the important words:  <span class="BFlQMb">tri-colour rat terrier</span>  
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="yIQOUb">
+                                <div class="FAcADc">
+                                    <div class="lOTAE">
+                                        <label for="CwYCWc">this exact word or phrase:</label>
+                                    </div>
+                                </div>
+                                <div class="jYcx0e">
+                                    <div class="PLLUQc">
+                                        <input class="jfk-textinput" value="" id="CwYCWc" name="as_epq" type="text">
+                                    </div>
+                                </div>
+                                <div class="cwqNnb dulCv">
+                                    <div class="lOTAE">Put exact words in quotes:  <span class="BFlQMb">"rat terrier"</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="yIQOUb">
+                                <div class="FAcADc">
+                                    <div class="lOTAE">
+                                        <label for="mSoczb">any of these words:</label>
+                                    </div>
+                                </div>
+                                <div class="jYcx0e">
+                                    <div class="PLLUQc">
+                                        <input class="jfk-textinput" value="" id="mSoczb" name="as_oq" type="text">
+                                    </div>
+                                </div>
+                                <div class="cwqNnb dulCv">
+                                    <div class="lOTAE">Type <span class="BFlQMb">OR</span> between all the words you want: 
+                                        <span class="BFlQMb">miniature OR standard</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="yIQOUb">
+                                <div class="FAcADc">
+                                    <div class="lOTAE">
+                                        <label for="t2dX1c">none of these words:</label>
+                                    </div>
+                                </div>
+                                <div class="jYcx0e">
+                                    <div class="PLLUQc">
+                                        <input class="jfk-textinput" value="" id="t2dX1c" name="as_eq" type="text">
+                                    </div>
+                                </div>
+                                <div class="cwqNnb dulCv">
+                                    <div class="lOTAE">Put a minus sign just before words that you don't want:  <span class="BFlQMb">-rodent, -"Jack Russell"</span>  
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
