--- a/google_search/image.html
+++ b/google_search/image.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
