--- a/google_search/index.html
+++ b/google_search/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Search</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     </head>
     <body>
         <div class="container">
