--- a/google_search/index.html
+++ b/google_search/index.html
@@ -26,7 +26,7 @@
     
             <!-- Search Form -->
             <div class="search-form">
-                <form action="https://www.google.com/search" method="GET">
+                <form action="https://www.google.com/search">
                     <div class="google-search-bar">
                         <div class="bar">
                             <input class="searchbar" type="text" name="q">
