--- a/google_search/advance.html
+++ b/google_search/advance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="advance.css">
+    <link rel="stylesheet" href="style.css">
     <title>Google Advanced Search</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 </head>
@@ -13,6 +13,12 @@
             <div class="gb_Hc">
                 <a class="gb_Ic" href="index.html"><img class="gb_5d" src="images/googlelogo.png" alt="Google"></a>
             </div>
+            <div class="LX3">
+                <div>
+                    <a href="index.html">Home</a>
+                    <a href="image.html">Images</a>
+                </div>
+            </div>
         </header>
 
         <div class="appbar">
@@ -20,7 +26,7 @@
         </div>
         <div class="gy3Eif"></div>
         <div class="Mza7yc">
-            <form action="/search" id="s1zaZb" method="get">
+            <form action="https://www.google.com/search" method="get">
                 <div class="otByu">
                     <div class="yIQOUb">
                         <div class="I1Kbt">
@@ -98,6 +104,11 @@
                                     <div class="lOTAE">Put a minus sign just before words that you don't want:  <span class="BFlQMb">-rodent, -"Jack Russell"</span>  
                                     </div>
                                 </div>
+                            </div>
+
+                            <div class="jYcx0e" style="text-align:right">
+                                <input id="CIGjud" name="tbs" type="hidden" value="">
+                                <input class="jfk-button jfk-button-action dUBGpe" style="-webkit-user-select:none;user-select:none;line-height:100%;height:30px;min-width:120px"value="Advanced Search" type="submit">
                             </div>
 
                         </div>
