--- a/google_search/advance.html
+++ b/google_search/advance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="advance.css">
     <title>Google Advanced Search</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 </head>
